RET-5818 (#2698)
* Refactor applications package structure and update PMD test failure thresholds

* Document Number on LiP apps plus Sonar Fix

* Refactor respondent system user checks in ClaimantTellSomethingElseController and TseClaimantRepReplyController

* Update TseHelper to use tseRespondingToTribunalText for response determination

* Enhance document handling in TseClaimantRepReplyService and TseRespondentReplyService to include supporting material attachments