@@ -27,13 +27,13 @@ import uk.gov.hmcts.ethos.replacement.docmosis.domain.documents.TornadoDocument;
 import uk.gov.hmcts.ethos.replacement.docmosis.helpers.HelperTest;
 import uk.gov.hmcts.ethos.replacement.docmosis.helpers.SignificantItemType;
 import uk.gov.hmcts.ethos.replacement.docmosis.idam.IdamApi;
+import uk.gov.hmcts.ethos.replacement.docmosis.service.applications.TseService;
 import uk.gov.hmcts.ethos.utils.TseApplicationBuilder;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.URI;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -324,7 +324,7 @@ class TornadoServiceTest {
     }
 
     private void mockTornadoConnection() throws IOException {
-        mockConnection = new MockHttpURLConnection(new URL("http://testdocmosis"));
+        mockConnection = new MockHttpURLConnection(URI.create("http://testdocmosis").toURL());
         tornadoConnection = mock(TornadoConnection.class);
         when(tornadoConnection.createConnection()).thenReturn(mockConnection);
     }
